# skill-studio-pro

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README_en.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-macos.yml  ci-windows.yml  ci.yml  release.yml
artifacts/: THIRD-PARTY-LICENSES.json
artifacts/sbom/: frontend.cdx.json  rust.cdx.json  skill-studio-pro.cdx.json
branding/: PRO-BRAND-PLACEHOLDER.md  PRO-BRAND.md
branding/upstream-logo-reference/: README.md  generate-brand-assets.mjs
branding/upstream-screenshots-reference/: README.md
docs/: ARCHITECTURE.md  AUTOMATED-TESTING.md  PRD.md  RELEASE.md  SPEC.md  TECHNICAL-DESIGN.md  THIRD-PARTY-NOTICES.md  V1-EXECUTION-PLAN.md  release-notes.md
docs/handoffs/: AI-ROUTING.md  FINAL-RELEASE-AUDIT.md  INTEGRATION.md  INVENTORY-INDEX.md  LIBRARY-MAPPING.md  LIFECYCLE.md  PUBLIC-BETA.md  TEST-VALIDATION.md  UI-SHELL.md  V1-PRODUCT-CLOSURE.md  WAVE-0.md  WINDOWS-UAT.md
scripts/: assemble-release-assets.mjs  generate-brand-assets.mjs  generate-supply-chain.mjs  generate_checksums.ps1  generate_checksums.sh  stage-release-assets.mjs  verify-release-metadata.mjs  verify-repository-hygiene.mjs
scripts/ci/: smoke-linux.sh  smoke-macos.sh  smoke-windows.ps1  test-secret-store-linux.sh
scripts/windows-uat/: desktop-uia.ps1  install-and-launch-isolated.ps1  mock-openai-provider.mjs  prepare-isolated-uat.ps1  run-release-benchmark.ps1  verify-external-unchanged.ps1
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: bootstrap.rs  commands.rs  db.rs  diff.rs  domain.rs  lib.rs  main.rs  snapshot.rs  store.rs  team.rs
src-tauri/src/ai/: defaults.rs  http.rs  minimax.rs  mod.rs  model.rs  openai.rs  prompts.rs  provider.rs  redaction.rs  repository.rs  router.rs  schema.rs  service.rs
src-tauri/src/commands/: ai.rs  files.rs  health.rs  inventory.rs  library.rs  lifecycle.rs  market.rs  operations.rs  organization.rs  origin.rs  platforms.rs  projects.rs  settings.rs  skills.rs  snapshots.rs  teams.rs  trash.rs
src-tauri/src/credentials/: store.rs
src-tauri/src/db/: migrations.rs  schema.rs
src-tauri/src/inventory/: duplicates.rs  hashing.rs  mod.rs  model.rs  parser.rs  repository.rs  scanner.rs  service.rs  watcher.rs
src-tauri/src/lifecycle/: file_transaction.rs  journal.rs  mod.rs  model.rs  repository.rs  source.rs
src-tauri/src/market/: category.rs  clawhub_api.rs  clawskills_api.rs  common.rs  mod.rs  officialskills_api.rs  skillssh_api.rs  skillssh_repo.rs
src-tauri/src/origin/: confidence.rs  evidence.rs  mod.rs  model.rs  repository.rs  service.rs
src-tauri/src/platform/: adapter.rs  mod.rs  registry.rs
src-tauri/src/services/: ai_service.rs  library_service.rs  lifecycle_service.rs  mapping_service.rs  mod.rs  trash_service.rs
src-tauri/src/snapshot/: create.rs  query.rs  state.rs
src-tauri/src/store/: common.rs  description.rs  files.rs  import.rs  organization.rs  platform.rs  project.rs  settings.rs
src-tauri/src/team/: activity.rs  crud.rs  delivery.rs  diff.rs  diffs.rs  file_browser.rs  paths.rs  permissions.rs  pull.rs  sql.rs  submissions.rs
src-tauri/src/workspace/: config.rs  mod.rs  paths.rs
src-tauri/tests/: ai_integration.rs  db_integration.rs  inventory_integration.rs  inventory_performance.rs  library_mapping_integration.rs  lifecycle_integration.rs  migration_matrix.rs  store_integration.rs  team_integration.rs
src/app/: AppProviders.tsx  AppShell.tsx  navigation.tsx
src/app/providers/: AppSettingsContext.tsx  I18nContext.tsx  ThemeContext.tsx
src/features/activity/: styles.css
src/features/ai-settings/: styles.css
src/features/discover/: styles.css
src/features/editor/: navigationGuard.ts  styles.css
src/features/integration/: CiWorkflowContract.test.ts  DesktopWindowContract.test.ts  (+1 more)
src/shared/: styles.css
src/styles/: detail-workspace.css  layout.css  my-skills.css  pro-theme.css  tokens.css
src/types/: skill.ts  team.ts
(+251 files in other folders)
