[package]
name = "skill-studio"
version = "0.1.0"
description = "Skill workspace and collaboration desktop app"
authors = ["Jensen"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/liu673/skill-studio"
homepage = "https://github.com/liu673/skill-studio"

[lib]
name = "skill_studio_lib"
crate-type = ["rlib"]
test = false

[[bin]]
name = "skill-studio"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
similar = "2.6"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
open = "5"
tokio = { version = "1", features = ["time"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
