[package]
name = "skill-studio-pro"
version = "0.1.0"
description = "Skill Studio Pro local-first desktop workspace"
authors = ["Jensen", "Skill Studio Pro contributors"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "skill_studio_pro_lib"
crate-type = ["rlib"]
test = true

[[bin]]
name = "skill-studio-pro"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
similar = "2.6"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
open = "5"
tokio = { version = "1", features = ["time"] }
regex = "1"
notify = "8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
