[package]
name = "skill-studio-pro"
version = "0.1.0-beta.1"
description = "Skill Studio Pro local-first desktop workspace"
authors = ["Jensen", "Skill Studio Pro contributors"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Hao2080/skill-studio-pro"
homepage = "https://github.com/Hao2080/skill-studio-pro"
keywords = ["tauri", "skills", "local-first", "ai-agent"]

[lib]
name = "skill_studio_pro_lib"
crate-type = ["rlib"]
test = true

[[bin]]
name = "skill-studio-pro"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
similar = "2.6"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
open = "5"
tokio = { version = "1", features = ["time", "sync", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
zeroize = "1"
regex = "1"
notify = "8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }

[dev-dependencies]
tempfile = "3"
